--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,24 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
 body {
   font-family: "Montserrat";
+}
+
+.interFont {
+  font-family: 'Inter', sans-serif;
+}
+
+.timesNewRomanFont {
+  font-family:  "Times New Roman", Times, serif;
 }
 
 .lazyLoadImageContainer img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
 }
