--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
 
 body {
   font-family: "Montserrat";
 }
 
 .interFont {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .timesNewRomanFont {
-  font-family:  "Times New Roman", Times, serif;
+  font-family: "Times New Roman", Times, serif;
 }
 
 .lazyLoadImageContainer img {
@@ -30,3 +30,8 @@ body {
   transition: filter 0.3s;
 }
 
+@media screen and (min-width: 370px) and (max-width: 1023px) {
+  .increase-font-on-mobile {
+    font-size: 18px !important;
+  }
+}
